--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "docker-registry-frontend",
   "version": "0.0.2",
-  "dependencies": {},
+  "dependencies": {
+    "markdown":"^0.5.0",
+    "angular-marked":"^1.2.0"
+  },
   "devDependencies": {
     "bower": "^1.7.2",
     "connect-modrewrite": "^0.8.2",
