--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,8 @@
   "name": "docker-registry-frontend",
   "version": "0.0.0",
   "dependencies": {
+    "markdown":"^0.5.0",
+    "angular-marked":"^1.2.0",
     "angular": "~1.3.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
