--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,6 @@
   "name": "docker-registry-frontend",
   "version": "0.0.0",
   "dependencies": {
-    "markdown":"^0.5.0",
-    "angular-marked":"^1.2.0",
     "angular": "~1.3.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
@@ -20,7 +18,8 @@
     "angular-moment": "~0.8.2",
     "angular-smart-table": "~1.3.0",
     "angular-filter": "~0.5.2",
-    "angular-bootstrap-checkbox": "~0.3.1"
+    "angular-bootstrap-checkbox": "~0.3.1",
+    "angular-marked":"^1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
